# mlcube

./: '  .bashrc  .gitignore  :W  Cargo.toml  NOTES.md  README.md  TODO.md  agent_analysis.ipynb  agent_solve.py  analysis.ipynb  build.gradle  experiment.ipynb  experimenting.ipynb  experiments.py  multi.py  network.json  notebook.ipynb  project.py  py.env  readme.md  requirements.txt  requirements_cpu.txt  requirements_freezed.txt  requirements_gpu.txt  script.py  settings.gradle  stop.sh  test.py  textbook.ipynb
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml  codeql.yml  rust-clippy.yml  rust.yml
.ipynb_checkpoints/: analysis-checkpoint.ipynb
agent/: agent  training_history.json
api/: Cargo.toml
api/src/: main.rs
archive/: notebook.ipynb  project.py
archive/src/: replay.py
dashboard/: .gitignore  package-lock.json  package.json  tailwind.config.js
dashboard/prisma/: POST_PROCESS.md  schema.env  schema.prisma
dashboard/src/: database.ts
environment/: Cargo.toml
explore/: epsilon_approach.py
lib/: cube.py
libs/: __init__.py  cube.py
model/: requirements_gpu.txt
model/src/: model.py  (+3 more)
python/: .gitignore  README.md  schema.env
rust/: Cargo.toml  librust.pyi  mlcube.pyi
sql/: README.md  initialize.sql  restore.ipynb
src/: Agent.py  __init__.py  agent.py  database.py  environment.py  environment.rs  lib.rs  main.rs  moves.py  network.py  project.py  reinforce_agent.py
src_archive/: moves.py  network.py  project.py
tests/: param_function.rs  test_agent.py  test_environment.py  test_network.py
(+220 files in other folders)
