[package]
name = "mlcube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rayon = "1.8"
serde = { version = "1.0.193", features = ["derive"] }
serde-big-array = "0.5.1"
ron = "0.8.1"
git2 = "0.18.1"
